# aegisneuro

./: .gitignore  BUILD_ANDROID.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  advanced_audio.py  aegis_audio_engine.py  aegis_longevity_brain.py  aegis_marketplace.py  aegis_neuro_core.py  aegis_neuro_gui.py  aegis_neuro_mobile.py  aegis_neuro_system.py  aegis_ppg_processor.py  aegis_rl_brain.py  aegis_spatial_audio.py  aegis_storm_predictor.py  ai_orchestrator.py  android_camera.py  audio_engine.py  bio_controller.py  bio_dsp.py  buildozer.spec  longevity_analytics.py  main.py  main_orchestrator.py  polar_ble.py  pyproject.toml  requirements-dev.txt  requirements.txt  settings.gradle.kts  test_camera_ppg.py  watch_companion_installer.py
.github/workflows/: android.yml
aegis/: __init__.py  config.py  pipeline.py  update_checker.py
aegis/core/: __init__.py  dsp.py  longevity.py  marketplace.py  muse.py  orchestrator.py  ppg.py  rl_brain.py  storm.py  watch.py
aegis/core/audio/: __init__.py  engine.py  spatial.py  voice.py
android_manifest/: aegis_watch_receiver.xml
android_src/org/aegisneuro/aegisneuro/: AegisGattCallback.java  AegisScanCallback.java  AegisWatchConnectionBridge.java  AegisWatchMessageService.java  AegisWatchRuntimeBridge.java
android_src/org/aegisneuro/ble/: GattCallbackWrapper.java  ScanCallbackWrapper.java
docs/: watch4_integration_plan.md
keystore/: aegisneuro-release.keystore
tests/: test_audio_engine.py  test_core.py  test_watch.py
wear/: settings.gradle.kts
wear/app/: build.gradle.kts
wear/app/src/main/: AndroidManifest.xml
(+5 files in other folders)
